test-app/src/custom-components/homepage-template.less
.HomepageTemplate {
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  min-width: @edu-min-page-width;
}

.HomepageTemplate-main {
  width: 100%;
}

.HomepageTemplate-aboveFold {
  width: 100%;
  height: 100vh;
  display: grid;
  grid-template-rows: auto 1fr;
}

.HomepageTemplate-aboveFoldContentWrapper {
  background:
    url('./images/homepage-hero-transition.svg') bottom left no-repeat,
    url('./images/homepage-hero-right.svg') right top no-repeat,
    url('./images/homepage-hero-left.svg') left top no-repeat;
  background-size: 100% auto, auto 100%, auto 100%;
  background-color: @edu-primary-color-light;

  @media @edu-media-phone {
    background:
      url('./images/homepage-hero-transition.svg') bottom left no-repeat,
      url('./images/homepage-hero-right.svg') right top no-repeat;
    background-size: 100% auto, auto 100%;
    background-color: @edu-primary-color-light;
  }
}

.HomepageTemplate-aboveFoldContent {
  .m-page-content;
  width: 100%;
  height: 100%;
  display: grid;
  gap: @edu-content-padding;
  place-content: start;
  grid-auto-flow: row;
  margin: 15% auto 0 auto;
  max-width: @edu-content-width-narrow;
}

.HomepageTemplate-logo {
  display: flex;
  align-items: center;
  flex-direction: column;
  margin-top: auto;
  margin-bottom: 20px;
}

.HomepageTemplate-presentationLogo {
  display: flex;
  justify-content: center;
  width: 80px;
  aspect-ratio: 1;
}

.HomepageTemplate-subtitle {
  font-size: @edu-font-size-xl;
  font-weight: 300;
  text-align: center;
  color: @edu-white;
  margin-top: 10px;

  @media @edu-media-phone {
    font-size: @edu-font-size-lg;
  }
}

.HomepageTemplate-children {
  color: @edu-white;
}

.HomepageTemplate-underFold {
  width: 100%;
  display: grid;
  grid-auto-flow: row;
  place-items: center;
  z-index: @edu-z-index-background-layer;
}

.HomepageTemplate-underFoldStripe {
  width: 100%;
  padding: @edu-page-content-padding;

  &.HomepageTemplate-underFoldStripe--documents {
    background-color: @edu-background-color-medium;
  }

  &.HomepageTemplate-underFoldStripe--project {
    padding-bottom: 3 * @edu-page-content-padding;
    background: url('./images/homepage-documents-transition.svg') top left no-repeat;
    background-size: 100% auto;
  }

  &.HomepageTemplate-underFoldStripe--oer {
    padding-top: 3 * @edu-page-content-padding;
    padding-bottom: 3 * @edu-page-content-padding;
    background-color: @test-app-oer-presentation-background-color;
  }
}

.HomepageTemplate-underFoldStripeContent {
  width: 100%;
  margin: 0 auto;
  max-width: @edu-content-width-wide;
}

